force-app/main/default/objects/AdvancedShipment__c/AdvancedShipment__c.object-meta.xml
<CustomObject>
    <label>Job</label>
    <nameField>
        <displayFormat>AS-{00000}</displayFormat>
        <label>Job ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>