force-app/main/default/objects/AdvancedShipment__c/fields/Advance_Shipment_Status__c.field-meta.xml
<CustomField>
    <fullName>Advance_Shipment_Status__c</fullName>
    <label>Advance Shipment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Created</fullName>
                <default>true</default>
                <label>Created</label>
            </value>
            <value>
                <fullName>Booking Process</fullName>
            </value>
            <value>
                <fullName>Submit SI/ VGM</fullName>
            </value>
            <value>
                <fullName>Submit AMS/ACI/ISF</fullName>
            </value>
            <value>
                <fullName>Bill, Cargo Manifest Process</fullName>
            </value>
            <value>
                <fullName>Pre Alert</fullName>
            </value>
            <value>
                <fullName>Debit &amp; Credit</fullName>
            </value>
            <value>
                <fullName>Follow Shipment (Until Cnee Received Cargo)</fullName>
            </value>
            <value>
                <fullName>Double Check -&gt; Release cargo</fullName>
            </value>
            <value>
                <fullName>PL Approve</fullName>
            </value>
            <value>
                <fullName>Empty return</fullName>
            </value>
            <value>
                <fullName>Before loading date (2 days)</fullName>
            </value>
            <value>
                <fullName>Load date % VN return port</fullName>
                <label>Loading date &amp; VN return port</label>
            </value>
            <value>
                <fullName>After drop op date</fullName>
                <label>After drop off date</label>
            </value>
            <value>
                <fullName>Close PL Sheet</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Finish CDS &amp; Import Tax</fullName>
                <isActive>false</isActive>
                <label>Finish CDS &amp; Import Tax</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Process Documentation</fullName>
                <isActive>false</isActive>
                <label>Process Documentation</label>
            </value>
            <value>
                <fullName>Process Documentation &amp; Freight</fullName>
                <isActive>false</isActive>
                <label>Process Documentation &amp; Freight</label>
            </value>
            <value>
                <fullName>Submit &amp; Finish CDS</fullName>
                <isActive>false</isActive>
                <label>Submit &amp; Finish CDS</label>
            </value>
            <value>
                <fullName>Trucking Process</fullName>
                <isActive>false</isActive>
                <label>Trucking Process</label>
            </value>
            <value>
                <fullName>Value1</fullName>
                <isActive>false</isActive>
                <label>Value1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>