force-app/main/default/objects/AdvancedShipment__c/fields/AgentDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>AgentDetailInformation__c</fullName>
    <label>Agent’s Detail Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>