force-app/main/default/objects/AdvancedShipment__c/fields/Air_Type__c.field-meta.xml
<CustomField>
    <fullName>Air_Type__c</fullName>
    <label>Air Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TransportationWay__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Air_Type</valueSetName>
    </valueSet>
</CustomField>