force-app/main/default/objects/AdvancedShipment__c/fields/AirCargoTerminal__c.field-meta.xml
<CustomField>
    <fullName>AirCargoTerminal__c</fullName>
    <label>Air Cargo Terminal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kho ALSC: CÔNG TY CỔ PHẦN NHÀ GA HÀNG HÓA (ALSC)</fullName>
            </value>
            <value>
                <fullName>Kho ACSV: CÔNG TY CỔ PHẦN DỊCH VỤ HÀNG HÓA HÀNG KHÔNG VIỆT NAM (ACSV)</fullName>
            </value>
            <value>
                <fullName>Kho NCTS: CÔNG TY CỔ PHẦN DỊCH VỤ HÀNG HÓA NỘI BÀI (NCTS)</fullName>
            </value>
            <value>
                <fullName>Kho SCSC: CÔNG TY CỔ PHẦN HÀNG HÓA SÀI GÒN (SCSC)</fullName>
            </value>
            <value>
                <fullName>Kho TSC: CÔNG TY CỔ PHẦN DỊCH VỤ HÀNG HÓA TÂN SƠN NHẤT (TCS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>