force-app/main/default/objects/AdvancedShipment__c/fields/AirTerminalNameonAN__c.field-meta.xml
<CustomField>
    <fullName>AirTerminalNameonAN__c</fullName>
    <formula>If( Text(AirCargoTerminal__c) = &quot;Kho TSC: CÔNG TY CỔ PHẦN DỊCH VỤ HÀNG HÓA TÂN SƠN NHẤT (TCS)&quot;,  LEFT( Text(AirCargoTerminal__c) , 7), LEFT( Text(AirCargoTerminal__c) , 8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Air Terminal Name on AN</label>
    <type>Text</type>
</CustomField>