force-app/main/default/objects/AdvancedShipment__c/fields/AMSACIAFRENS__c.field-meta.xml
<CustomField>
    <fullName>AMSACIAFRENS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMS/ACI/AFR/ENS Clearance</label>
    <type>Checkbox</type>
</CustomField>