force-app/main/default/objects/AdvancedShipment__c/fields/AMSACIAFRENSAssigned__c.field-meta.xml
<CustomField>
    <fullName>AMSACIAFRENSAssigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AMS/ACI/AFR/ENS Assigned</label>
    <type>Checkbox</type>
</CustomField>