force-app/main/default/objects/AdvancedShipment__c/fields/Application_NO__c.field-meta.xml
<CustomField>
    <fullName>Application_NO__c</fullName>
    <label>Application NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>