force-app/main/default/objects/AdvancedShipment__c/fields/ApplyTax__c.field-meta.xml
<CustomField>
    <fullName>ApplyTax__c</fullName>
    <formula>ShippingInformation__r.ApplyTax__c</formula>
    <label>Apply Tax?</label>
    <type>Checkbox</type>
</CustomField>