force-app/main/default/objects/AdvancedShipment__c/fields/ATA__c.field-meta.xml
<CustomField>
    <fullName>ATA__c</fullName>
    <label>ATA</label>
    <type>Date</type>
</CustomField>