force-app/main/default/objects/AdvancedShipment__c/fields/ATD__c.field-meta.xml
<CustomField>
    <fullName>ATD__c</fullName>
    <label>ATD</label>
    <type>Date</type>
</CustomField>