force-app/main/default/objects/AdvancedShipment__c/fields/Bill_Received__c.field-meta.xml
<CustomField>
    <fullName>Bill_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill Received</label>
    <type>Checkbox</type>
</CustomField>