force-app/main/default/objects/AdvancedShipment__c/fields/BuyingBillingPaid__c.field-meta.xml
<CustomField>
    <fullName>BuyingBillingPaid__c</fullName>
    <label>Buying-Billing Paid</label>
    <summaryFilterItems>
        <field>ConsolBill__c.PaymentConfirmedBuying__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ConsolBill__c.ConsolidationShipmentName__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>