force-app/main/default/objects/AdvancedShipment__c/fields/Cargo_Closing_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Closing_DateTime__c</fullName>
    <label>Cargo Closing Date/Time</label>
    <type>DateTime</type>
</CustomField>