force-app/main/default/objects/AdvancedShipment__c/fields/Cargo_Unit__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Unit__c</fullName>
    <label>Cargo Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B/PLT</fullName>
            </value>
            <value>
                <fullName>BAG</fullName>
            </value>
            <value>
                <fullName>BAL</fullName>
            </value>
            <value>
                <fullName>BALE</fullName>
            </value>
            <value>
                <fullName>BALE, COMPRESSED</fullName>
            </value>
            <value>
                <fullName>BALE, NON-COMPRESSED</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>BARE</fullName>
            </value>
            <value>
                <fullName>BARREL</fullName>
            </value>
            <value>
                <fullName>BILL</fullName>
            </value>
            <value>
                <fullName>BIN</fullName>
            </value>
            <value>
                <fullName>BOX</fullName>
            </value>
            <value>
                <fullName>BOX CARTON</fullName>
            </value>
            <value>
                <fullName>BOXE</fullName>
            </value>
            <value>
                <fullName>BOXPAL</fullName>
            </value>
            <value>
                <fullName>BUCKET</fullName>
            </value>
            <value>
                <fullName>BULK</fullName>
            </value>
            <value>
                <fullName>BUNDLE</fullName>
            </value>
            <value>
                <fullName>CAGE</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>CAN, CYLINDRICAL</fullName>
            </value>
            <value>
                <fullName>CAN, RECTANGULAR</fullName>
            </value>
            <value>
                <fullName>CARBOY, NON-PROTECTED</fullName>
            </value>
            <value>
                <fullName>CARBOY, PROTECTED</fullName>
            </value>
            <value>
                <fullName>CARDBOARD</fullName>
            </value>
            <value>
                <fullName>CARDBOXE</fullName>
            </value>
            <value>
                <fullName>CARTON</fullName>
            </value>
            <value>
                <fullName>CARTON BOX</fullName>
            </value>
            <value>
                <fullName>CARTON BOXE</fullName>
            </value>
            <value>
                <fullName>CARTON PALLET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>