force-app/main/default/objects/AdvancedShipment__c/fields/CargoType__c.field-meta.xml
<CustomField>
    <fullName>CargoType__c</fullName>
    <label>Cargo Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CY/CY</fullName>
            </value>
            <value>
                <fullName>CFS/CFS</fullName>
            </value>
            <value>
                <fullName>CY/CFS</fullName>
            </value>
            <value>
                <fullName>CFS/CY</fullName>
            </value>
            <value>
                <fullName>LCL/LCL</fullName>
            </value>
            <value>
                <fullName>FCL/FCL</fullName>
            </value>
            <value>
                <fullName>FI/CL</fullName>
            </value>
            <value>
                <fullName>CY/FO</fullName>
            </value>
            <value>
                <fullName>FI/FO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>