force-app/main/default/objects/AdvancedShipment__c/fields/Carrier_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Carrier Company Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Advanced_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>