force-app/main/default/objects/AdvancedShipment__c/fields/CarrierDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>CarrierDetailInformation__c</fullName>
    <label>Carrier’s Detail Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>