force-app/main/default/objects/AdvancedShipment__c/fields/CarrierFormula__c.field-meta.xml
<CustomField>
    <fullName>CarrierFormula__c</fullName>
    <formula>Carrier_Company_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Carrier Formula</label>
    <type>Text</type>
</CustomField>