force-app/main/default/objects/AdvancedShipment__c/fields/ChargeableWeight__c.field-meta.xml
<CustomField>
    <fullName>ChargeableWeight__c</fullName>
    <label>Chargeable Weight</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>