force-app/main/default/objects/AdvancedShipment__c/fields/CheckPDF__c.field-meta.xml
<CustomField>
    <fullName>CheckPDF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CheckPDF</label>
    <type>Checkbox</type>
</CustomField>