force-app/main/default/objects/AdvancedShipment__c/fields/CLP_VanningDevanning_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>CLP_VanningDevanning_Request_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CLP &amp; Vanning/Devanning Request Sent</label>
    <type>Checkbox</type>
</CustomField>