force-app/main/default/objects/AdvancedShipment__c/fields/CompletelyPaid__c.field-meta.xml
<CustomField>
    <fullName>CompletelyPaid__c</fullName>
    <formula>IF(NumberofBuyingBilling__c =  BuyingBillingPaid__c &amp;&amp; NumberofBuyingBilling__c &lt;&gt; 0 &amp;&amp; BuyingBillingPaid__c &lt;&gt; 0,TRUE,FALSE)</formula>
    <label>Completely Paid</label>
    <type>Checkbox</type>
</CustomField>