force-app/main/default/objects/AdvancedShipment__c/fields/CompletelyReceived__c.field-meta.xml
<CustomField>
    <fullName>CompletelyReceived__c</fullName>
    <formula>IF(NumberofSellingBilling__c = SellingBillingReceived__c &amp;&amp; NumberofSellingBilling__c  &lt;&gt; 0 &amp;&amp; SellingBillingReceived__c  &lt;&gt; 0 , TRUE, FALSE)</formula>
    <label>Completely Received</label>
    <type>Checkbox</type>
</CustomField>