force-app/main/default/objects/AdvancedShipment__c/fields/ConsealReportOnly__c.field-meta.xml
<CustomField>
    <fullName>ConsealReportOnly__c</fullName>
    <formula>TEXT ( Container_Qnty_1__c ) &amp;  &quot;x&quot;  &amp;  TEXT ( Container_Type_1__c )  &amp;

IF ( OR ( ISNULL ( Container_Qnty_2__c ) , Container_Qnty_2__c = 0 ) , &quot;&quot; , &quot;; &quot;  &amp;  TEXT ( Container_Qnty_2__c ) &amp;  &quot;x&quot;  &amp;  TEXT ( Container_Type_2__c ) ) &amp;

IF ( OR ( ISNULL ( Container_Qnty_3__c ) , Container_Qnty_3__c = 0 ) , &quot;&quot; , &quot;; &quot;  &amp;  TEXT ( Container_Qnty_3__c ) &amp;  &quot;x&quot;  &amp;  TEXT ( Container_Type_3__c ) ) &amp;  

&quot;; &quot;  &amp;  TEXT ( GrossWeight__c )  &amp;  &quot; Kgs / &quot;  &amp;   TEXT ( MeasurementCBM__c )  &amp;  &quot; CBM&quot;</formula>
    <label>Conseal</label>
    <type>Text</type>
</CustomField>