force-app/main/default/objects/AdvancedShipment__c/fields/Consignee_Name__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Name__c</fullName>
    <formula>MConsignee__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consignee Name</label>
    <type>Text</type>
</CustomField>