force-app/main/default/objects/AdvancedShipment__c/fields/ConsigneeDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>ConsigneeDetailInformation__c</fullName>
    <label>Consignee’s Detail Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>