force-app/main/default/objects/AdvancedShipment__c/fields/ConsolType__c.field-meta.xml
<CustomField>
    <fullName>ConsolType__c</fullName>
    <label>Consolidation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consol</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>