force-app/main/default/objects/AdvancedShipment__c/fields/Container_No_Seal_No__c.field-meta.xml
<CustomField>
    <fullName>Container_No_Seal_No__c</fullName>
    <label>Container No &amp; Seal No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>