force-app/main/default/objects/AdvancedShipment__c/fields/Container_Qnty_2__c.field-meta.xml
<CustomField>
    <fullName>Container_Qnty_2__c</fullName>
    <label>Container Qnty-2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>