force-app/main/default/objects/AdvancedShipment__c/fields/ContainerReturnDepot__c.field-meta.xml
<CustomField>
    <fullName>ContainerReturnDepot__c</fullName>
    <label>Container Return Depot</label>
    <type>TextArea</type>
</CustomField>