force-app/main/default/objects/AdvancedShipment__c/fields/CreateCustomClearance__c.field-meta.xml
<CustomField>
    <fullName>CreateCustomClearance__c</fullName>
    <formula>ShippingInformation__r.CreateCustomClearance__c</formula>
    <label>Create Custom Clearance?</label>
    <type>Checkbox</type>
</CustomField>