force-app/main/default/objects/AdvancedShipment__c/fields/CreateTrucking__c.field-meta.xml
<CustomField>
    <fullName>CreateTrucking__c</fullName>
    <formula>ShippingInformation__r.CreateTrucking__c</formula>
    <label>Create Trucking?</label>
    <type>Checkbox</type>
</CustomField>