force-app/main/default/objects/AdvancedShipment__c/fields/CustomerDetailInformation__c.field-meta.xml
<CustomField>
    <fullName>CustomerDetailInformation__c</fullName>
    <label>Customer’s Detail Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>