force-app/main/default/objects/AdvancedShipment__c/fields/CY_Container_Bonded_Time__c.field-meta.xml
<CustomField>
    <fullName>CY_Container_Bonded_Time__c</fullName>
    <label>C/Y Container Bonded Time</label>
    <type>DateTime</type>
</CustomField>