force-app/main/default/objects/AdvancedShipment__c/fields/Date_of_MBL_Issued__c.field-meta.xml
<CustomField>
    <fullName>Date_of_MBL_Issued__c</fullName>
    <label>Date of MBL Issued</label>
    <type>Date</type>
</CustomField>