force-app/main/default/objects/AdvancedShipment__c/fields/Debit_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Debit_Confirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debit Confirmed</label>
    <type>Checkbox</type>
</CustomField>