force-app/main/default/objects/AdvancedShipment__c/fields/Debit_Revision_Requested__c.field-meta.xml
<CustomField>
    <fullName>Debit_Revision_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Debit Revision Requested</label>
    <type>Checkbox</type>
</CustomField>