force-app/main/default/objects/AdvancedShipment__c/fields/DIMH__c.field-meta.xml
<CustomField>
    <fullName>DIMH__c</fullName>
    <label>DIM (H)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>