force-app/main/default/objects/AdvancedShipment__c/fields/DIML__c.field-meta.xml
<CustomField>
    <fullName>DIML__c</fullName>
    <label>DIM (L)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>