force-app/main/default/objects/AdvancedShipment__c/fields/DIMW__c.field-meta.xml
<CustomField>
    <fullName>DIMW__c</fullName>
    <label>DIM (W)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>