force-app/main/default/objects/AdvancedShipment__c/fields/EBookingID__c.field-meta.xml
<CustomField>
    <fullName>EBookingID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>E-Booking ID</label>
    <referenceTo>EBooking__c</referenceTo>
    <relationshipName>Advanced_Shipment</relationshipName>
    <type>Lookup</type>
</CustomField>