force-app/main/default/objects/AdvancedShipment__c/fields/ETD_at_Transit_Port__c.field-meta.xml
<CustomField>
    <fullName>ETD_at_Transit_Port__c</fullName>
    <label>ETD at Transit Port</label>
    <type>Date</type>
</CustomField>